<resources>
    <string name="app_name">Basketball Game</string>
    <string name="home_team">Home</string>
    <string name="away_team">Away</string>
    <string name="score_text">0</string>
    <string name="freeThrow">Free Throw</string>
    <string name="twoPoints">2 Points</string>
    <string name="threePoints">3 Points</string>
    <string name="reset">Reset</string>
    <string name="GameOver">Game Over</string>
    <string name="description">Logo of every team</string>

</resources>
